--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=erp-system-secret-key-2024-fashion-store
 DATABASE_URL=mongodb://localhost:27017/erp_system
 MONGODB_URI=mongodb://localhost:27017/erp_system
+WHATSAPP_SERVICE_URL=http://localhost:1112
 WHATSAPP_API_KEY=whatsapp-secret-2024
 
 # API Key for website integration
