--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@ MONGODB_URI=mongodb://localhost:27017/erp_system
 WHATSAPP_SERVICE_URL=http://localhost:1112
 WHATSAPP_API_KEY=whatsapp-secret-2024
 
-# API Key for website integration
+# API Key for website integration jkdhfsh
 ERP_API_KEY=your-secret-api-key-here
